<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feed"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_feed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_api"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_api"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bridges"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_bridges"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
